# primjer

./: Dockerfile  environment-docker.yml  environment-minimal.yml  environment.yml  main.py  model.pkl  pixi.toml  pyproject.toml  reproducibility_test.py  requirements.txt  test.py  train.py
