[project]
name = "primjer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib==1.5.3",
    "numpy==1.23.0",
    "opencv-python>=4.7.0.72",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "threadpoolctl==3.6.0",
]
